@@ -73,6 +73,8 @@ Version 1.7.5+svn:
    * Started with the a new event handler for gui2
    * Fix unit facings after moving (bug #14336)
    * Improved the teamcoloring script for images.
+ * Animations
+   * new animations to help drakes to take off and land : pre-movement post-movement draw_weapon sheath_weapon
 
 Version 1.7.5:
  * Campaigns:
